<resources>
    <string name="app_name">SaveLoadInputFileText</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="entered_passwords_are_not_equal">Entered passwords are not equal</string>
    <string name="toast_message_logged_in">"You logged in as: "</string>
    <string name="toast_message_wrong_password">Wrong password</string>
    <string name="toast_message_user_not_found">User not found</string>
    <string name="toast_message_user_registered">User registered</string>
</resources>