<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/loginEdtTxtId"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordEdtTxtId"
        android:autofillHints="@string/password"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordEdtTxtId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/loginEdtTxtId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginBtnId"
        android:autofillHints=""
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBtnId"
        android:enabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="4dp"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/passwordEdtTxtId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerBtnId"/>

    <Button
        android:id="@+id/registerBtnId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_margin="4dp"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/loginBtnId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>